--- a/works/Hannah/prophet/prophet.ipynb
+++ b/works/Hannah/prophet/prophet.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Automated Forecasting Libraries\n",
+    "# Automated Forecasting Libraries\n",
     "# Prophet—https://facebook.github.io/prophet\n",
     "# NeuralProphet—https://neuralprophet.com/html/index.html\n",
     "# PyTorch Forecasting—https://pytorch-forecasting.readthedocs.io/en/stable\n",
@@ -950,146 +950,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>ds</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>2014-09-01</td>\n",
-       "      <td>28.744480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>2014-09-02</td>\n",
-       "      <td>28.370585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>2014-09-03</td>\n",
-       "      <td>28.133059</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>2014-09-04</td>\n",
-       "      <td>28.256798</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.833333</td>\n",
-       "      <td>2014-09-05</td>\n",
-       "      <td>28.372353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>375729</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.866667</td>\n",
-       "      <td>2016-08-27</td>\n",
-       "      <td>17.150954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>375730</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.866667</td>\n",
-       "      <td>2016-08-28</td>\n",
-       "      <td>16.962051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>375731</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.866667</td>\n",
-       "      <td>2016-08-29</td>\n",
-       "      <td>16.915474</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>375732</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.866667</td>\n",
-       "      <td>2016-08-30</td>\n",
-       "      <td>16.536761</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>375733</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.866667</td>\n",
-       "      <td>2016-08-31</td>\n",
-       "      <td>15.910995</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>375734 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        lat       lon         ds          y\n",
-       "0       0.0  0.833333 2014-09-01  28.744480\n",
-       "1       0.0  0.833333 2014-09-02  28.370585\n",
-       "2       0.0  0.833333 2014-09-03  28.133059\n",
-       "3       0.0  0.833333 2014-09-04  28.256798\n",
-       "4       0.0  0.833333 2014-09-05  28.372353\n",
-       "...     ...       ...        ...        ...\n",
-       "375729  1.0  0.866667 2016-08-27  17.150954\n",
-       "375730  1.0  0.866667 2016-08-28  16.962051\n",
-       "375731  1.0  0.866667 2016-08-29  16.915474\n",
-       "375732  1.0  0.866667 2016-08-30  16.536761\n",
-       "375733  1.0  0.866667 2016-08-31  15.910995\n",
-       "\n",
-       "[375734 rows x 4 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The y column contains the values to be forecast, and those values must be numeric, whether float or integer.\n",
     "train_df['startdate'] = pd.to_datetime(train_df['startdate'])\n",
     "new_train_df = train_df[['lat', 'lon', 'startdate', 'contest-tmp2m-14d__tmp2m']]\n",
-    "new_train_df = new_train_df.rename(columns={'startdate': \"ds\", 'contest-tmp2m-14d__tmp2m': \"y\"})\n",
-    "\n"
+    "new_train_df = new_train_df.rename(columns={'startdate': \"ds\", 'contest-tmp2m-14d__tmp2m': \"y\"})"
    ]
   },
   {
