--- a/works/Qianwei/score_0.912.ipynb
+++ b/works/Qianwei/score_0.912.ipynb
@@ -3396,7 +3396,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ds",
+   "display_name": "wids",
    "language": "python",
    "name": "python3"
   },
@@ -3410,7 +3410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 | packaged by conda-forge | (main, Nov 22 2022, 08:27:35) [Clang 14.0.6 ]"
+   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
   },
   "papermill": {
    "default_parameters": {},
@@ -3426,7 +3426,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "264fb4b3cfce54d90a7d976fcf89a390651d31ec38339fb6df7eeafd4e25629d"
+    "hash": "0451676878bdd6b1ba727d3808bf00b547d9dc93d5dd28c95c5b472d82cc5010"
    }
   }
  },
